# avcoder

app/: .gitignore  CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/cn/iwenchaos/avcoder/: MainActivity.java  lesson.java
app/src/main/java/cn/iwenchaos/avcoder/utils/: FFUtil.java
app/src/main/java/cn/iwenchaos/avcoder/widgets/: FFVideoView.java
app/src/main/jniLibs/includes/libavutil/: ffversion.h
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
